--- a/project.ipynb
+++ b/project.ipynb
@@ -3085,6 +3085,16 @@
     "joblib.dump(xgb_model, \"xgb_model.pkl\")\n",
     "joblib.dump(tfidf, \"tfidf_vectorizer.pkl\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "final_model = joblib.load(\"xgb_model.pkl\")"
+   ]
   }
  ],
  "metadata": {
